--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,9 @@
-pool: MyAgentPool
+trigger:
+- main
+pool:
+  vmImage: ubuntu-latest
+variables:
+  buildconfiguration: 'Release'
 steps:
-- bash: echo hello world
+- script: dotnet build --configuration $(buildconfiguration)
+  displayName: 'dotnet build $(buildconfiguration)'
